  * Run patch_sharp in LSharp_exclamation_reader to handle new case of
    defpackage ops at head of fasl vector, required for maxima build
  * Special symbol Dotnil has ordinary list Cnil for plist and hpack
  * Small fixes for profiling support
  * Restore pp() function for debugging; print out undefined symbol
    names
  * Small patch for fix xgcl demo (thanks  Michael Koehne)

 -- Camm Maguire <camm@enhanced.com>  Fri,  8 Aug 2003 13:42:40 +0000

gcl (2.5.3-2) unstable; urgency=low

  * gcc-3.3 all platforms

 -- Camm Maguire <camm@enhanced.com>  Mon,  7 Jul 2003 16:10:25 +0000

gcl (2.5.3-1) unstable; urgency=low

  * New upstream release
  * Restore object_to_float and object_to_double, cmpaux.c, Closes: #195470.
  * Remove obsolete functiion multiply-bignum-stack from documentation,
    si-defs.texi
  * Unstatic object_to_float, object_to_double

 -- Camm Maguire <camm@enhanced.com>  Mon,  2 Jun 2003 12:38:03 -0400

gcl (2.5.2-1) unstable; urgency=low

  * New upstream release
  * Cleanup xdrfuns.c for Axiom
  * Reenable xgcl build

 -- Camm Maguire <camm@enhanced.com>  Thu, 20 Mar 2003 09:15:54 -0500

gcl (2.5.1-1) unstable; urgency=high

  * some optimization now on hppa
  * Add RELEASE-2.5.1 file
  * Add dedication notice to the memory of W. Schelter

 -- Camm Maguire <camm@enhanced.com>  Sun,  2 Mar 2003 10:20:26 -0500

gcl (2.5.0.cvs20020625-80) unstable; urgency=low

  * enable japi configure flag, defaults to no
  * enable -mlongcall on ppc when using gcc 3.3 or higher
  * int -> fixnum in DEFUN function arguments for safety -- ensures
    pointers and integers passed by lisp are of same size
  * MYmake_fixnum macro simplification
  * ufixnum typedef
  * Prototypes for cmod et.al. -- restoring maxima build on ia64
  * Fix unaligned access message on ia64 generated by DFLT_aet_fix
  * Integer va_arg uses fixnum
  * Define __*i3 symbols used by GCL, supplied by libc, and written into
    some GCL compiled objects, restores ARM build with ANSI image