@@ -53,30 +53,36 @@ build_symbol_table_bfd(void) {
   if ((v=bfd_canonicalize_symtab(bself,q))<0)
     FEerror("Cannot canonicalize self's symtab",0);
   for (u=0;u<v;u++) {
-    char *c;
+    char *c=NULL;
+    struct bfd_link_hash_entry *h;
+
+    if (!*q[u]->name)
+      continue;
+
     if ((c=(char *)strstr(q[u]->name,"@@"))) {
-      struct bfd_link_hash_entry *h;
       *c=0;
       if (!(h=bfd_link_hash_lookup(link_info.hash,q[u]->name,MY_BFD_TRUE,MY_BFD_TRUE,MY_BFD_TRUE)))
 	FEerror("Cannot make new hash entry",0);
-      h->type=bfd_link_hash_defined;
-      if (!q[u]->section)
-	FEerror("Symbol is missing section",0);
-      h->u.def.value=q[u]->value+q[u]->section->vma;
-      h->u.def.section=q[u]->section;
-      *c='@';
-    }
-    if (!strncmp(q[u]->name,"__",2) && !strcmp("i3",q[u]->name+strlen(q[u]->name)-2)) {
-      struct bfd_link_hash_entry *h;
-      if (!(h=bfd_link_hash_lookup(link_info.hash,q[u]->name,MY_BFD_TRUE,MY_BFD_TRUE,MY_BFD_TRUE)))
+      h->type=bfd_link_hash_new;
+    } else if 
+      (!(h=bfd_link_hash_lookup(link_info.hash,q[u]->name,MY_BFD_FALSE,MY_BFD_FALSE,MY_BFD_TRUE)) &&
+       !(h=bfd_link_hash_lookup(link_info.hash,q[u]->name,MY_BFD_TRUE,MY_BFD_TRUE,MY_BFD_TRUE)))
 	FEerror("Cannot make new hash entry",0);
+
+    if (h->type!=bfd_link_hash_defined) {
       h->type=bfd_link_hash_defined;
       if (!q[u]->section)
-	FEerror("Symbol is missing section",0);
+	FEerror("Symbol ~S is missing section",1,make_simple_string(q[u]->name));
       h->u.def.value=q[u]->value+q[u]->section->vma;
       h->u.def.section=q[u]->section;
+    }
+
+    if (c) {
+      *c='@';
+      c=NULL;
     }
   }
+
 #ifndef HAVE_ALLOCA
   free(q);
 #endif
